fixing bug on mobile

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -95,7 +95,6 @@
   .side {
     order: 1;
     width: 50vw;
-    height: fit-content;
   }
   .winning {
     top: 50%;
